# rag_chatbot

./: .gitignore  pyproject.toml
.github/workflows/: deploy_cloud_run.yml  infraops.yml
Agentongcp/: .env  Dockerfile
Agentongcp/.adk/: session.db
Agentongcp/agent/: .env
Agentongcp/agent/tools/: create_confluence_page.py  external_web_search.py  scrape_webpage_content.py
Infra/Iac/gcr/: main.tf  providers.tf  variables.tf
Infra/Iac/gke/: main.tf  providers.tf  variables.tf
Infra/Iac/vpc/: main.tf  providers.tf  variables.tf
Infra/manifests/: backend-deploy.yaml  chroamdb-sts.yaml  chromadb-pv.yaml  chromadb-service.yaml
Infra/manifests/conversational_agent/: agent-deploy.yaml  agent-service.yaml
Infra/manifests/rag/: backend-deploy.yaml  chromadb-pvc.yaml  configmap.yaml  rag-backend-service.yaml
Infra/mlflow/: requirements.txt  test_run.py
rag/: Dockerfile  RagConfigParser.py  RagLogger.py  SingletonDB.py  config.json  main.py  pyproject.toml  utils.py
rag/bot/: MlEngine.py  embeddings.py
