[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.6",
    "fastapi>=0.124.2",
    "google-genai>=1.55.0",
    "google-generativeai>=0.8.5",
    "pdfreader>=0.1.15",
    "pypdf>=6.4.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "rag_chatbot",
    "rag",
]
